[gd_scene load_steps=16 format=3 uid="uid://bdktoaq21c5xd"]

[ext_resource type="Script" uid="uid://dy1cfudnsajyy" path="res://Scripts/player.gd" id="1_uygo4"]
[ext_resource type="Script" uid="uid://cjpns3m3ir6wp" path="res://Scripts/trajectory.gd" id="2_l02lo"]
[ext_resource type="Texture2D" uid="uid://c481j8kh3h8fw" path="res://Sprites/Mr Purple/aim_sheet.png" id="3_tx1dd"]
[ext_resource type="SpriteFrames" uid="uid://cd1fq6263xxw6" path="res://Sprites/SpriteFrames/Purple.tres" id="3_vgqql"]

[sub_resource type="Animation" id="Animation_fkybt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hand:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1.25664]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(5, -16)]
}

[sub_resource type="Animation" id="Animation_yqx0t"]
resource_name = "idle_hand_L"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(-5, -16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1.80984]
}

[sub_resource type="Animation" id="Animation_a1rq5"]
resource_name = "idle_hand_R"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(5, -16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1.21511]
}

[sub_resource type="Animation" id="Animation_svftf"]
resource_name = "walk_hand_L"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hand:rotation")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [1.93977, 2.09617, 2.35259, 2.15683, 1.68504, 1.30315, 1.10253, 1.65475, 1.50604, 2.06157, 2.03962]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hand:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-8, -13), Vector2(-6, -11), Vector2(-2, -8), Vector2(-4.76837e-07, -10), Vector2(-4, -14), Vector2(-5, -16), Vector2(9, -14), Vector2(2, -18), Vector2(-5, -15), Vector2(-1, -8), Vector2(-1, -8)]
}

[sub_resource type="Animation" id="Animation_vgqql"]
resource_name = "walk_gun"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hand:rotation")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [1.11178, 0.990551, 0.94702, 1.11071, 1.25292, 1.47516, 1.88244, 1.65011, 1.52762, 1.0965, 1.08076]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hand:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(6, -14), Vector2(-2, -16), Vector2(-11, -16), Vector2(1, -16), Vector2(1, -16), Vector2(2, -11), Vector2(2, -11)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x3wgy"]
_data = {
&"RESET": SubResource("Animation_fkybt"),
&"idle_hand_L": SubResource("Animation_yqx0t"),
&"idle_hand_R": SubResource("Animation_a1rq5"),
&"walk_hand_L": SubResource("Animation_svftf"),
&"walk_hand_R": SubResource("Animation_vgqql")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tx1dd"]
size = Vector2(61, 75)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kruvw"]
radius = 14.0
height = 112.0

[sub_resource type="CircleShape2D" id="CircleShape2D_aa6qj"]
radius = 16.1245

[sub_resource type="CircleShape2D" id="CircleShape2D_bnuy0"]
radius = 3.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h4iuc"]
size = Vector2(41, 52.5)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 536870914
collision_mask = 273
floor_constant_speed = true
script = ExtResource("1_uygo4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_x3wgy")
}
autoplay = "RESET"

[node name="Hand" type="Node2D" parent="."]
position = Vector2(5, -16)
rotation = 1.25664

[node name="HandSprite" type="Sprite2D" parent="Hand"]
visible = false
texture_filter = 3
position = Vector2(-6, 17)
texture = ExtResource("3_tx1dd")
region_enabled = true
region_rect = Rect2(0, 0, 131, 128)

[node name="HoldSpot" type="Marker2D" parent="Hand"]
position = Vector2(34.166, 1.63795)

[node name="Polygon2D" type="Polygon2D" parent="Hand/HoldSpot"]
visible = false
polygon = PackedVector2Array(-1.16701, -1.57318, -0.833977, 0.637954, 1.06814, 1.25598, 1.68617, -0.646133, 0.735109, -0.955148)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 3
sprite_frames = ExtResource("3_vgqql")
animation = &"grab_ceiling"
autoplay = "idle"

[node name="InteractionArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(-1.5, 23.5)
shape = SubResource("RectangleShape2D_tx1dd")
debug_color = Color(0.627451, 0.529412, 0, 0.0784314)

[node name="LightRay" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(0, 0)
collision_mask = 16

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_kruvw")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="ShadowCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_aa6qj")
debug_color = Color(0.568627, 0.129412, 0.509804, 0.180392)

[node name="ShadowShotCollision" type="StaticBody2D" parent="."]
position = Vector2(0, -4)
collision_layer = 0
collision_mask = 128

[node name="ShadowShotCollisionShape" type="CollisionShape2D" parent="ShadowShotCollision"]
shape = SubResource("CircleShape2D_bnuy0")
debug_color = Color(0.368714, 0.587983, 0.516904, 0.42)

[node name="TrajectoryLine" type="Line2D" parent="."]
visible = false
width = 2.0
joint_mode = 2
end_cap_mode = 2
script = ExtResource("2_l02lo")

[node name="GrabCastTop" type="RayCast2D" parent="."]
position = Vector2(0, -16)
target_position = Vector2(0, -34)
collision_mask = 192

[node name="GrabCastRight" type="RayCast2D" parent="."]
target_position = Vector2(26, 0)
collision_mask = 192

[node name="GrabCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-26, 0)
collision_mask = 192

[node name="GrabCastDown" type="RayCast2D" parent="."]
target_position = Vector2(0, 70)
collision_mask = 145

[node name="ShadowShotGroundCast" type="RayCast2D" parent="."]
target_position = Vector2(0, 26)

[node name="MeleeCast" type="RayCast2D" parent="."]
target_position = Vector2(40, 0)
collision_mask = 32768

[node name="MeleeHitBox" type="Area2D" parent="."]
position = Vector2(30, 1)
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeHitBox"]
position = Vector2(-6.5, -8.25)
shape = SubResource("RectangleShape2D_h4iuc")
debug_color = Color(0.984314, 0, 0.329412, 0)

[node name="HitBoxPosRight" type="Marker2D" parent="."]
position = Vector2(30, 1)

[node name="HitBoxPosLeft" type="Marker2D" parent="."]
position = Vector2(-30, 1)

[node name="RightShoulderPos" type="Marker2D" parent="."]
position = Vector2(5, -16)

[node name="LeftShoulderPos" type="Marker2D" parent="."]
position = Vector2(-5, -16)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="area_entered" from="InteractionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="InteractionArea" to="." method="_on_interaction_area_area_exited"]
